refactor(resource): 重构资源清理逻辑以支持多版本JDK
重构 BasicResourceGuard 以支持从 JDK 8 到 24 的多版本兼容性，主要改进包括：
- 增加 JDK 版本检测和能力探测机制
- 支持虚拟线程检测和清理
- 优化 MySQL 线程清理流程
- 改进 JDBC 驱动反注册逻辑
- 增强线程引用清理的健壮性
- 添加详细的日志和诊断信息